--- a/style.css
+++ b/style.css
@@ -39,10 +39,16 @@ nav ul {
   gap: 20px;  
 }
 
+a, a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+
 nav li a {
   text-decoration: none;
   font-weight: bold;
-  
+  color: white;
 }
 
 nav li a:visited {
@@ -55,6 +61,7 @@ nav li a:hover {
   color: rgb(195, 231, 231);
   cursor: pointer;
 }
+
 
 .two {
   padding: 10px;
